# harei

./: .env.example  .gitignore  Dockerfile  README.md  cookie-todo.md  package-lock.json  pyproject.toml  todo.md  重构文档.md
.github/workflows/: docker.yml
docs/: 数据迁移说明.md
server/: app.py  db.py  koshuihuangdou.py  requirements.txt  run.py
server/app/: __init__.py
server/app/api/: livestatus.py
server/app/models/: gift.py  images.py  message.py  music.py  tag.py
server/app/services/: gift_service.py  images_service.py  message_service.py  music_service.py  tag_service.py
server/app/static/CSS/: audit.css  birthday-effect.css  box.css  gift.css  host.css  manage_tags.css  message.css  sidebar.css  songs.css  style.css
server/app/static/components/: host-sidebar.html  sidebar.html
server/app/static/js/: anniversary.js  audit.js  box.js  (+8 more)
server/app/templates/: addmusic.html  audit.html  box.html  gift.html  index.html  login.html  message.html  songs.html  tag.html
server/docs/: db_message.md
server/models/: __init__.py  captain_event.py  gift.py  message.py  message_image.py  music.py
server/routes/: admin.py  assets.py  captains.py  gifts.py  messages.py  music.py
server/scripts/: db_init.sql
server/services/: captain_service.py  live_service.py  music_cache.py
server/utils/: images.py  tokens.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.jsx  main.jsx
web/src/components/: BackgroundRotator.jsx  FullscreenCard.jsx
web/src/pages/: AdminPage.jsx  HistoryPage.jsx  HomePage.jsx
web/src/styles/: global.css
